crates/shell-parser/tests/snapshots/parser_snapshots__simple__background.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"sleep 10 &\")"
---
Background(
    Simple(
        SimpleCommand {
            assignments: [],
            words: [
                Word {
                    parts: [
                        Literal(
                            "sleep",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "10",
                        ),
                    ],
                },
            ],
            redirections: [],
        },
    ),
)
