crates/shell-parser/tests/snapshots/parser_snapshots__simple__command_with_args.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo hello world\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "hello",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "world",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
