crates/shell-parser/tests/snapshots/parser_snapshots__simple__comment.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo hello # this is a comment\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "hello",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
