crates/shell-parser/tests/snapshots/parser_snapshots__simple__pipeline.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"ls -la | grep foo\")"
---
Pipeline(
    [
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "ls",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "-la",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "grep",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "foo",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    ],
)
