crates/shell-parser/tests/snapshots/parser_snapshots__simple__variable_reference.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $HOME\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "HOME",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
